# mobile-backup

./: .gitattributes  .gitignore  AGENTS.md  README.md  backup_utils.py  check_adb_path.py  cleanup_folder.py  config.example.yaml  mobile_backup.py  organize_files.py  pyproject.toml  rename_images.py  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  epic.md  ticket.md
.github/workflows/: ci.yml  validate-issue.yml  validate-pr-sop.yml  validate-pr.yml
tests/: test_destination_span.py  test_mobile_backup_pipeline.py  test_organize_files.py  test_playground.py  test_rename_images.py
