[tool.poetry]
name = "phone-backup"
version = "0.1.0"
description = "Automated phone-to-cloud backup orchestrator."
authors = ["BlairG <blairg23@gmail.com>"]

# Don’t package/install the project; just manage the venv
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"
ExifRead= ">=2.3.1,<4.0.0"
Pillow = ">=12.2.0"
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=8,<10"
pytest-cov = ">=6,<8"
black = ">=24,<27"
ruff = ">=0.6,<0.16"
mypy = ">=1.11,<3.0"
types-PyYAML = "^6.0"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
